--- a/themes/emerge/assets/css/theme.css
+++ b/themes/emerge/assets/css/theme.css
@@ -7,6 +7,11 @@ Author URI:     https://simpleblend.net
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', helvetica, arial;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', helvetica, arial;
 }
 
 .logo {
@@ -22,6 +27,11 @@ body {
     margin: 0 0 25px 0;
     padding: 0;
 }
+
+.component {
+  width: 100%;
+}
+
 
 /*------------------- Begin Nav ---------------*/
 
@@ -77,6 +87,9 @@ nav li a:hover {
 .carousel-container {
   height: 500px;
   width: 100%;
+  padding: 0;
+  list-style: none;
+  margin: 0;
 }
 
 .carousel-img {
@@ -206,7 +219,7 @@ footer {
     width: 100%;
     display: inline-block;
     border-right: 1px solid black;
-    
+
 }
 
 .footer_contact {
@@ -239,7 +252,7 @@ footer {
 .footer_search {
     width: 100%;
     display: inline-block;
-   
+
 }
 
 form {
@@ -254,7 +267,7 @@ form {
     margin-top: 15px;
     padding: 0;
     text-align: center;
-    
+
 }
 
 .footer_sm_logo {
