--- a/themes/emerge/assets/css/theme.css
+++ b/themes/emerge/assets/css/theme.css
@@ -105,10 +105,47 @@ nav li a:hover {
 /*------------------- End Carousel ---------------*/
 
 
+
+/*------------------- Begin Partners ---------------*/
+
+
 .component-partners {
     width: 100%;
-    height: 500px;
+    height: 300px;
+    margin: 0;
+    padding: 0;
+    background-color: #7AC144;
 }
+
+.component-partners h1 {
+    color: #ffffff;
+    text-align: center;
+    font-family: 'Montserrat', helvetica, arial;
+    font-weight: 300;
+    font-size: 1.5em;
+    margin: 50px 0;
+    
+}
+
+.multiple-items {
+    width: 100%;
+    padding-left: 50px;
+}
+
+.partner_logo {
+    width: 200px;
+    height: 75px;
+    margin: 0;
+    padding:10px;
+}
+
+.partner_slide {
+    margin: 0 auto;
+}
+
+
+
+/*------------------- End Partners ---------------*/
 
 /*------------------- Begin Who We Are ---------------*/
 
