--- a/themes/emerge/assets/css/flexbox.css
+++ b/themes/emerge/assets/css/flexbox.css
@@ -3,9 +3,20 @@
 }
 
 .l-row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
 }
 
 .l-row-justify {
+  -webkit-justify-content: space-between;
   justify-content: space-between;
+}
+
+@media only screen and (max-width : 1300px)  {
+  .container {
+    width: 100%;
+  }
 }
