--- a/themes/emerge/assets/css/services.css
+++ b/themes/emerge/assets/css/services.css
@@ -140,7 +140,7 @@
 .service-content.is-active {
   transition: all ease 0.6s;
   width: 350px;
-  margin-top: 4em;
+  margin-top: 2em;
   visibility: visible;
   opacity: 1;
 }
@@ -167,6 +167,14 @@
 
 .end-of-life-bg {
   fill: #BBBDBF;
+}
+
+.in-market-bg.is-grey {
+  fill: #BBBDBF;
+}
+
+#in-market tspan.is-grey {
+  fill: #929497;
 }
 
 .in-market-bg {
