--- a/themes/emerge/assets/css/theme.css
+++ b/themes/emerge/assets/css/theme.css
@@ -10,27 +10,46 @@ Author URI:     https://simpleblend.net
 
 */
 body, html {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   font-family: 'Montserrat', helvetica, arial;
 }
 
+a {
+  color: #7ac144;
+}
+
+a:hover {
+  color: #404041;
+}
+
 .row {
-    margin: 0;
+  margin: 0;
+}
+
+.container {
+  max-width: 1200px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', helvetica, arial;
 }
 
+/*#wpadminbar {
+  display: none;
+}*/
+
 .logo {
   margin: 0 auto;
   display: block;
-  max-width: 250px;
+  max-width: 210px;
   margin-bottom: 3em;
+  margin-top: 12vw;
 }
 
-
+.main {
+  position: relative;
+}
 
 .header_black,
 .header_white {
@@ -58,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
 .menu-primary-navigation-container {
     display: block;
     width: 100%;
-    margin: 0 auto 50px;
+    margin: 0 auto 30px;
     height: auto;
 }
 
@@ -68,6 +87,10 @@ h1, h2, h3, h4, h5, h6 {
     padding:0;
     list-style:none;
     text-align: center;
+}
+
+.footer_quickNav .menu-primary-navigation-container .nav {
+  text-align: left;
 }
 
 .nav .menu-item {
@@ -91,8 +114,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer_quickNav .nav .menu-item a {
-
-    font-size: 0.8em;
+  font-size: 0.8em;
+  padding-bottom: 0;
+  text-align: left;
 }
 
 .nav .menu-item a:hover {
@@ -239,6 +263,11 @@ h1, h2, h3, h4, h5, h6 {
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
+
+.hvrbox.is-empty-desc .hvrbox-text {
+  top: 80%;
+}
+
 .hvrbox .hvrbox-text_mobile {
 	font-size: 15px;
 	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
@@ -454,11 +483,11 @@ footer .col-md-3 {
 }
 
 .footer_contact address {
-    font-family: 'Montserrat', helvetica, arial;
-    width: 80%;
-    margin: 0 auto 10px;
-    padding: 0;
-    font-weight: 600;
+  font-family: 'Montserrat', helvetica, arial;
+  width: 80%;
+  margin: 0 auto 10px;
+  padding: 0;
+  font-weight: 100;
 }
 
 .footer_contact p {
@@ -613,12 +642,9 @@ footer .footer-col-search {
     opacity: 0.7;
   }
 
-
   .form-search-wrapper {
     margin-bottom: 2em;
   }
-
-
 
   .gform_wrapper {
     width: 100%;
@@ -657,6 +683,10 @@ footer .footer-col-search {
   .footer-col .footer_quickNav,
   .footer-col .footer_contact {
     border-right: none;
+  }
+
+  .header-illustration-img {
+
   }
 
 }
@@ -828,6 +858,10 @@ footer .footer-col-search {
         color: #fff;
     }
 
+    .menu-primary-navigation-container {
+      margin-bottom: 0;
+    }
+
 }
 
 
@@ -922,6 +956,21 @@ and (max-device-width : 1024px)  {
 }
 
 
+
+
+
+@media screen and (max-width: 1200px) {
+
+  .header-illustration-left,
+  .header-illustration-right {
+    display: none;
+  }
+
+}
+
+
+
+
 @media screen and (max-width: 600px) {
 
   .header_black, .header_white {
@@ -983,7 +1032,6 @@ and (max-device-width : 1024px)  {
     font-size: 15px;
   }
 
-
 }
 
 
@@ -1007,5 +1055,80 @@ and (max-device-width : 1024px)  {
 }
 
 .footer_contact .footer-phone {
-  margin-top: 1em;
+  margin-top: 10px;
+}
+
+.footer_contact a {
+  font-weight: normal;
+}
+
+
+.header-illustration {
+  position: relative;
+}
+
+
+
+.header-illustration-img {
+  width: 100%;
+  position: absolute;
+  max-width: 1200px;
+  top: 16%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  z-index: 9999999;
+}
+
+
+
+
+.header-illustration-left {
+  top: 112px;
+  z-index: 999999;
+  left: -50.8vw;
+  position: relative;
+  width: calc(100vw - 1200px);
+}
+
+.header-illustration-left:before {
+  height: 73px;
+  background: #808285;
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+}
+
+.header-illustration-left:after {
+  height: 73px;
+  background: #666666;
+  top: 120px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+}
+
+
+.header-illustration-right {
+  top: 112px;
+  z-index: 999999;
+  right: -48.8vw;
+  position: relative;
+  width: calc(100vw - 1200px);
+}
+
+.header-illustration-right:before {
+  height: 73px;
+  background: #7ac144;
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+}
+
+.header-illustration-right:after {
+  height: 73px;
+  background: #7ac144;
+  top: 120px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
