--- a/themes/emerge/assets/css/services.css
+++ b/themes/emerge/assets/css/services.css
@@ -44,6 +44,7 @@
   color: #231f20;
   text-align: center;
   font-weight: bold;
+  line-height: 1.3;
 }
 
 .sercice-description {
@@ -120,7 +121,7 @@
 
 
 .service-content p {
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   margin-top: 10px;
 }
@@ -139,7 +140,7 @@
 
 .service-content.is-active {
   transition: all ease 0.6s;
-  width: 350px;
+  width: 300px;
   margin-top: 2em;
   visibility: visible;
   opacity: 1;
