--- a/themes/emerge/assets/css/theme.css
+++ b/themes/emerge/assets/css/theme.css
@@ -13,6 +13,7 @@ body, html {
   margin: 0 !important;
   padding: 0 !important;
   font-family: 'Montserrat', helvetica, arial;
+  overflow-x: hidden;
 }
 
 a {
@@ -28,12 +29,37 @@ a:hover {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', helvetica, arial;
 }
+
+.nav > li > a:focus,
+.nav > li > a:hover {
+  background: transparent;
+}
+
+.component-marquee {
+  display: none;
+}
+
+.slide-content {
+  position: absolute;
+  z-index: 9;
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 0;
+  font-size: 40px;
+  width: 70%;
+}
+
+
 
 /*#wpadminbar {
   display: none;
@@ -71,6 +97,9 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
 }
 
+.h1, h1 {
+  font-size: 2em;
+}
 
 /*------------------- Begin Nav ---------------*/
 
@@ -99,30 +128,31 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav:after {
-    content: '';
-    display: inline-block;
-    width: 100%;
+  content: '';
+  display: inline-block;
+  width: 100%;
 }
 
 .nav .menu-item a {
-    padding: 10px 25px;
-    color: #404041;
-    text-transform: uppercase;
-    font-size: 1.2em;
-    font-weight: 600;
-    font-family: Montserrat-Bold, helvetica, arial;
+  padding: 10px 25px;
+  color: #404041;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-weight: 600;
+  font-family: Montserrat-Bold, helvetica, arial;
 }
 
 .footer_quickNav .nav .menu-item a {
   font-size: 0.8em;
   padding-bottom: 0;
   text-align: left;
+  padding: 3px 0;
 }
 
 .nav .menu-item a:hover {
-    color: #7BC043;
-    text-decoration: none;
-    background: none;
+  color: #7BC043;
+  text-decoration: none;
+  background: none;
 }
 
 
@@ -143,11 +173,21 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+.carousel-overlay {
+  height: 500px;
+  background: black;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.44);
+}
+
 .carousel-img {
   background-size: cover;
   background-position: 50% 50%;
   height: 500px;
+  position: relative;
 }
+
+
 
 /*------------------- End Carousel ---------------*/
 
@@ -195,6 +235,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /*------------------- Begin Who We Are ---------------*/
 
+.service-heading {
+  text-transform: uppercase;
+}
+
 .component-who-we-are {
   background-image: url("../imgs/bg-who-we-are.svg");
   background-size: cover;
@@ -203,6 +247,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: auto;
   padding: 50px 0 100px 0;
+  margin-top: -5px;
 }
 
 .img_block {
@@ -288,8 +333,8 @@ h1, h2, h3, h4, h5, h6 {
 /*------------------- Begin Get Connected ---------------*/
 
 #map {
-  height: 550px;
-  width: 550px;
+  height: 500px;
+  width: 100%;
   float: right;
 }
 
@@ -312,7 +357,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .component-get-connected .gform_wrapper {
   margin-top: 0;
-  padding-right: 5em;
+  padding-right: 0;
 }
 
 .component-get-connected .gform_wrapper .gfield:first-child {
@@ -368,7 +413,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 100%;
   float: left;
-  padding-left: 4em;
+  /*padding-left: 4em;*/
   margin-top: 10px;
 }
 
@@ -488,6 +533,7 @@ footer .col-md-3 {
   margin: 0 auto 10px;
   padding: 0;
   font-weight: 100;
+  font-size: 90%;
 }
 
 .footer_contact p {
@@ -526,9 +572,13 @@ form {
   padding: 0;
 }
 
+.footer_sm a:hover {
+  text-decoration: none;
+}
+
 .footer_sm_logo {
     margin: 25px 10px;
-    width: 40px;
+    width: 30px;
     max-width: 75px;
 }
 
@@ -567,6 +617,113 @@ h6 {
 footer .footer-col-search {
   padding-left: 2em;
 }
+
+
+
+
+
+
+
+
+
+
+
+.nav-main {
+  position: relative;
+  text-align: center;
+}
+
+.nav-main:before {
+  content: '';
+  display: inline-block;
+  width: 75%;
+  height: 1px;
+  background: #ddd;
+  position: relative;
+  top: -20px;
+}
+
+.footer_contact .footer-phone {
+  margin-top: 10px;
+}
+
+.footer_contact a {
+  font-weight: normal;
+}
+
+.header-illustration {
+  position: relative;
+}
+
+.header-illustration-img {
+  width: 100%;
+  position: absolute;
+  max-width: 1200px;
+  top: 16%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  z-index: 9999999;
+}
+
+.header-illustration-left {
+  top: 103px;
+  z-index: 999999;
+  left: -50vw;
+  position: relative;
+  width: calc(100vw - 1100px);
+}
+
+.header-illustration-left:before {
+  height: 4.75em;
+  background: #808285;
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+}
+
+.header-illustration-left:after {
+  height: 4.787em;
+  background: #666666;
+  top: 110px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+}
+
+.header-illustration-right {
+  top: 103px;
+  z-index: 999999;
+  right: -48vw;
+  position: relative;
+  width: calc(100vw - 1100px);
+}
+
+.header-illustration-right:before {
+  height: 4.75em;
+  background: #7ac144;
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+}
+
+.header-illustration-right:after {
+  height: 4.75em;
+  background: #7ac144;
+  top: 110px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 /*------------------- Begin Media Queries ---------------*/
@@ -695,11 +852,6 @@ footer .footer-col-search {
 
 @media screen and (max-width: 767px) {
 
-  .hvrbox {
-    width: 100%;
-    padding: 0;
-  }
-
   .nav-main {
     margin-bottom: 0;
   }
@@ -722,13 +874,14 @@ footer .footer-col-search {
     color: white;
   }
 
+  .footer_quickNav .nav .menu-item a {
+    color: #404041;
+    text-align: center;
+  }
+
   .nav .menu-item a:hover {
     color: #231f20;
   }
-
-
-
-
 
   .component-header {
     margin-top: 2em;
@@ -742,132 +895,131 @@ footer .footer-col-search {
     width: 100%;
   }
 
-    .component-footer .col-sm-6, .col-xs-12 {
-        margin-bottom: 50px;
-    }
+  .component-footer .col-sm-6, .col-xs-12 {
+    margin-bottom: 10px;
+    /*padding-left: 0;*/
+  }
 
-    .component-header .container {
-        margin: 0;
-        padding: 0;
-    }
+  .component-header .container {
+      margin: 0;
+      padding: 0;
+  }
 
-    nav {
-        background-color: #7AC144;
-    }
+  nav {
+      background-color: #7AC144;
+  }
 
-    nav ul {
-        width: 100%;
+  nav ul {
+      width: 100%;
 
-    }
+  }
 
-    nav ul li {
-        display: block;
-        padding: 5px 0;
-    }
+  nav ul li {
+      display: block;
+      padding: 5px 0;
+  }
 
-    nav ul li a {
-        color: #ffffff;
-    }
+  nav ul li a {
+      color: #ffffff;
+  }
 
-    nav ul li a:hover {
-        color: #404041;
-    }
+  nav ul li a:hover {
+      color: #404041;
+  }
 
-    .partner_slide {
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    .partner_logo {
-      width: 200px;
+  .partner_slide {
+      width: 80%;
       margin: 0 auto;
-      padding:  25px;;
-    }
+  }
 
-    .component-who-we-are .container{
-        margin: 0;
-        padding: 0;
-    }
+  .partner_logo {
+    width: 200px;
+    margin: 0 auto;
+    padding:  25px;;
+  }
 
-    .footer_logoSec {
-        margin: 0 auto 50px;
-        padding: 0;
-        text-align: center;
-        border: none;
-    }
+  .component-who-we-are .container{
+      margin: 0;
+      padding: 0;
+  }
 
-    .footerLogo {
-        width: 250px;
-        margin: 0 auto;
-        padding: 0;
-    }
+  .footer_logoSec {
+      margin: 0 auto 50px;
+      padding: 0;
+      text-align: center;
+      border: none;
+  }
 
-    .footer_quickNav {
-        width: 100%;
-        margin: 0 auto;
-        padding: 0;
-        border: none;
-    }
+  .footerLogo {
+      width: 250px;
+      margin: 0 auto;
+      padding: 0;
+  }
 
-    .footer_quickNav ul {
-        width: 80%;
-    }
+  .footer_quickNav {
+      width: 100%;
+      margin: 0 auto;
+      padding: 0;
+      border: none;
+  }
 
-    .component-footer ul li   {
-        width: 100%;
-        text-align: center;
-        padding: 5px 0;
-    }
+  .footer_quickNav ul {
+      width: 80%;
+  }
 
-    .footer_contact {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 15px;
-        border: none;
-    }
+  .component-footer ul li   {
+      width: 100%;
+      text-align: center;
+      padding: 5px 0;
+  }
 
-    .footer_contact {
-        width: 80%;
-    }
+  .footer_contact {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 15px;
+      border: none;
+  }
 
-    form {
-        width: 100%;
-        margin: 0 auto;
-        text-align: center;
-    }
+  .footer_contact {
+      width: 80%;
+  }
 
-    .footer_sm {
-        width: 90%;
-        margin: 0 auto;
-        padding: 0;
-        text-align: center;
-    }
+  form {
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
+  }
 
-    .footer_sm_logo {
-        margin: 25px 5px 25px;
-        padding: 0;
-    }
+  .footer_sm {
+      width: 90%;
+      margin: 0 auto;
+      padding: 0;
+      text-align: center;
+  }
 
-    .thin_footer {
-        width: 100%;
-    }
+  .footer_sm_logo {
+      margin: 25px 5px 25px;
+      padding: 0;
+  }
 
-    h6{
-        margin-top: 15px;
-        text-align: center;
-        color: #fff;
-    }
+  .thin_footer {
+      width: 100%;
+  }
 
-    .menu-primary-navigation-container {
-      margin-bottom: 0;
-    }
+  h6{
+      margin-top: 15px;
+      text-align: center;
+      color: #fff;
+  }
+
+  .menu-primary-navigation-container {
+    margin-bottom: 0;
+  }
 
 }
 
 
-@media screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)  {
+@media screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
 
   .component-who-we-are .row {
       padding: 0;
@@ -953,10 +1105,39 @@ and (max-device-width : 1024px)  {
     text-align: center;
   }
 
+  .slide-content {
+    font-size: 30px;
+    width: 70%;
+  }
+
 }
 
 
+@media screen and (max-width: 1000px) {
 
+  .service-content {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .service-content-graph-wrapper {
+    margin-top: 26em;
+  }
+
+  .service-content .icon {
+    color: #7ac144;
+  }
+
+}
+
+@media screen and (max-width: 1100px) {
+
+  body,
+  html {
+    overflow-x: visible;
+  }
+
+}
 
 
 @media screen and (max-width: 1200px) {
@@ -973,12 +1154,31 @@ and (max-device-width : 1024px)  {
 
 @media screen and (max-width: 600px) {
 
+  .partner_slide {
+    position: relative;
+    left: -20px;
+  }
+
+  .service-content-graph-wrapper {
+    margin-top: 23em;
+  }
+
+  .slide-content {
+    font-size: 20px;
+    width: 70%;
+  }
+
+  .component-footer .footer-bottom.row h6 {
+    margin-bottom: 0;
+  }
+
   .header_black, .header_white {
-    font-size: 2em;
+    font-size: 1.6em;
   }
 
   .partner_logo {
-    margin-left: 16px;
+    margin: 0 auto;
+    padding: 0;
   }
 
   .component-who-we-are {
@@ -1032,103 +1232,16 @@ and (max-device-width : 1024px)  {
     font-size: 15px;
   }
 
+  .hvrbox {
+    width: 75%;
+    padding: 0;
+    margin: 5px 0;
+  }
+
 }
 
-
-
-
-
-
-.nav-main {
-  position: relative;
-  text-align: center;
-}
-
-.nav-main:before {
-  content: '';
-  display: inline-block;
-  width: 75%;
-  height: 1px;
-  background: #ddd;
-  position: relative;
-  top: -20px;
-}
-
-.footer_contact .footer-phone {
-  margin-top: 10px;
-}
-
-.footer_contact a {
-  font-weight: normal;
-}
-
-
-.header-illustration {
-  position: relative;
-}
-
-
-
-.header-illustration-img {
-  width: 100%;
-  position: absolute;
-  max-width: 1200px;
-  top: 16%;
-  left: 50%;
-  transform: translate(-50%, -10%);
-  z-index: 9999999;
-}
-
-
-
-
-.header-illustration-left {
-  top: 112px;
-  z-index: 999999;
-  left: -50.8vw;
-  position: relative;
-  width: calc(100vw - 1200px);
-}
-
-.header-illustration-left:before {
-  height: 73px;
-  background: #808285;
-  width: 100%;
-  z-index: 1;
-  position: absolute;
-}
-
-.header-illustration-left:after {
-  height: 73px;
-  background: #666666;
-  top: 120px;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-}
-
-
-.header-illustration-right {
-  top: 112px;
-  z-index: 999999;
-  right: -48.8vw;
-  position: relative;
-  width: calc(100vw - 1200px);
-}
-
-.header-illustration-right:before {
-  height: 73px;
-  background: #7ac144;
-  width: 100%;
-  z-index: 1;
-  position: absolute;
-}
-
-.header-illustration-right:after {
-  height: 73px;
-  background: #7ac144;
-  top: 120px;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
+@media screen and (min-width: 1600px) {
+  .logo {
+    margin-top: 9vw;
+  }
 }
